such automation wow travis break much build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,9 @@
     "env": {
         "jasmine": true
     },
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "rules": {
+        "indent": [2, 4],
+        "no-console": [0]
+    }
 }
