--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "babel-preset-es2015": "6.3.13",
         "babel-register": "6.3.13",
         "body-parser": "1.14.1",
+        "bottlejs": "1.2.1",
         "express": "4.x",
         "errorhandler": "1.4.2",
         "lodash": "3.10.1",
