--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
         "bottlejs": "1.2.1",
         "express": "4.x",
         "errorhandler": "1.4.2",
+        "ioredis": "1.13.0",
         "lodash": "3.10.1",
         "method-override": "2.3.5",
-        "morgan": "^1.6.1"
+        "request": "2.67.0",
+        "morgan": "^1.6.1",
+        "winston": "2.1.1"
     },
     "devDependencies": {
+        "bower": "1.7.1",
         "eslint": "1.10.3",
         "eslint-config-airbnb": "2.1.1",
         "eslint-plugin-react": "3.11.3",
+        "grunt": "0.4.5",
+        "grunt-contrib-watch": "0.6.1",
         "jasmine": "2.4.1",
         "npm-check-updates": "2.5.4",
         "nsp": "2.1.0"
