--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
         "start": "node index.js",
         "test": "babel-node spec/run-tests.js",
         "test-all": "nsp check && npm-check-updates && npm test && eslint app spec",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "webpack": "webpack"
     },
     "babel": {
         "presets": ["es2015"]
     },
     "dependencies": {
         "babel": "6.3.13",
+        "babel-core": "6.3.13",
         "babel-cli": "6.3.13",
         "babel-preset-es2015": "6.3.13",
         "babel-register": "6.3.13",
@@ -23,21 +25,28 @@
         "express": "4.x",
         "errorhandler": "1.4.2",
         "ioredis": "1.13.0",
+        "less": "^2.3.1",
         "lodash": "3.10.1",
         "method-override": "2.3.5",
+        "path": "0.12.7",
         "request": "2.67.0",
         "morgan": "^1.6.1",
         "winston": "2.1.1"
     },
     "devDependencies": {
+        "babel-loader": "6.2.0",
         "bower": "1.7.1",
+        "css-loader": "0.23.0",
         "eslint": "1.10.3",
         "eslint-config-airbnb": "2.1.1",
         "eslint-plugin-react": "3.11.3",
         "grunt": "0.4.5",
         "grunt-contrib-watch": "0.6.1",
         "jasmine": "2.4.1",
+        "less-loader": "2.2.2",
         "npm-check-updates": "2.5.4",
-        "nsp": "2.1.0"
+        "nsp": "2.1.0",
+        "style-loader": "0.13.0",
+        "webpack": "1.12.9"
     }
 }
