--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
         "presets": ["es2015"]
     },
     "dependencies": {
+        "angular": "1.4.8",
+        "angular-animate": "1.4.8",
+        "angular-resource": "1.4.8",
+        "angular-route": "1.4.8",
         "babel": "6.3.13",
         "babel-core": "6.3.13",
         "babel-cli": "6.3.13",
@@ -25,7 +29,7 @@
         "express": "4.x",
         "errorhandler": "1.4.2",
         "ioredis": "1.13.0",
-        "less": "^2.3.1",
+        "less": "^2.5.3",
         "lodash": "3.10.1",
         "method-override": "2.3.5",
         "path": "0.12.7",
